# stock-akshare

./: .gitignore  README.md  pyproject.toml
app/api/: router.py
app/api/endpoints/: sector_routes.py  stock_routes.py
app/core/: config.py
app/mcp/: index_mcp.py  news_mcp.py  router.py  sector_mcp.py  sentiment_mcp.py  stock_mcp.py  technical_mcp.py
app/models/: stock_models.py
app/services/: index_service.py  news_service.py  sector_service.py  sentiment_service.py  stock_service.py  technical_service.py
tests/api/: test_sector_routes.py  test_stock_routes.py
tests/mcp/: test_news_mcp.py  test_sector_mcp.py  test_stock_mcp.py
